# Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Engine.sln  README.md  Settings.ini
pilcrow/: CMakeLists.txt
pilcrow/dependencies/: CMakeLists.txt
pilcrow/dependencies/assimp/: CMakeLists.txt
pilcrow/dependencies/assimp/assimp-4.0.1/Debug/: IrrXML.lib  assimp-vc140-mt.exp  assimp-vc140-mt.lib  zlibd.exp  zlibd.lib  zlibstaticd.lib
pilcrow/dependencies/assimp/assimp-4.0.1/Release/: IrrXML.lib  assimp-vc140-mt.exp  zlib.exp  zlibstatic.lib
pilcrow/dependencies/cpprestsdk/cpprestsdk-2.10.0/Debug/: cpprest141_2_10.lib
pilcrow/dependencies/cpprestsdk/cpprestsdk-2.10.0/Release/: cpprest141_2_10.lib
pilcrow/dependencies/detection_idiom/: CMakeLists.txt
pilcrow/dependencies/detection_idiom/include/: detection_idiom.hpp
pilcrow/dependencies/freetype/freetype-2.9/Debug/: freetype.lib
pilcrow/dependencies/glad/: CMakeLists.txt
pilcrow/dependencies/glad/include/: glad.h
pilcrow/dependencies/glad/src/: glad.c
pilcrow/dependencies/glfw/glfw-3.2.1/Debug/: glfw3.lib
pilcrow/dependencies/glfw/glfw-3.2.1/Release/: glfw3.lib
pilcrow/dependencies/glm/: CMakeLists.txt
pilcrow/dependencies/slot_map/: CMakeLists.txt
pilcrow/dependencies/slot_map/include/: slot_map.hpp
pilcrow/dependencies/stb_image/: CMakeLists.txt
pilcrow/dependencies/utils/: CMakeLists.txt
pilcrow/dependencies/utils/include/: EventArena.hpp  FileWatcher.hpp  Resource.hpp  ResourceSettings.h  Singleton.hpp  ThreadPool.hpp  type_list.hpp
pilcrow/dependencies/utils/licenses/: Masstronaut-Utils-LICENSE.txt
pilcrow/dependencies/utils/src/: Resource.cpp
pilcrow/engine/: CMakeLists.txt
pilcrow/engine/core/: CMakeLists.txt  EntityRef.cpp  RenderComponents.h  RenderSystem.cpp  RenderSystem.h  SettingsFileReader.hpp  Simulation.cpp  Simulation.hpp  World.cpp  World.hpp  World.inl  WorldEvents.hpp
pilcrow/engine/core/component/: CMakeLists.txt  ComponentAggregate.cpp  ComponentAggregate.hpp  ComponentAggregate.inl  ComponentPool.hpp  ComponentPool.inl  ComponentTraits.hpp
pilcrow/engine/core/components/: CMakeLists.txt  Transform.h  WeaponComponents.h
pilcrow/engine/core/entity/: ArchetypeRef.cpp  ArchetypeRef.hpp  ArchetypeRef.inl  CMakeLists.txt  ConstrainedEntityRef.hpp  EntitiesWith.hpp  EntitiesWith.inl  Entity.cpp  Entity.hpp  Entity.inl  EntityRef.cpp  EntityRef.hpp  EntityRef.inl
pilcrow/engine/core/include/: Camera.hpp  Detectors.hpp  EntityID.hpp  EntityRef.hpp  GLFWWindow.hpp  GLProgram.hpp  GLShader.hpp  GLTextRenderer.hpp  Model.hpp  RenderComponents.h  RenderSystem.h  RendererCommon.hpp  SettingsFileReader.hpp  Simulation.hpp  World.hpp  WorldEvents.hpp
pilcrow/engine/core/include/component/: ComponentAggregate.hpp  ComponentPool.hpp  ComponentTraits.hpp  WeaponComponents.h
pilcrow/engine/core/include/components/: Transform.h
pilcrow/engine/core/include/entity/: ArchetypeRef.hpp  ConstrainedEntityRef.hpp  EntitiesWith.hpp  Entity.hpp  EntityRef.hpp
pilcrow/engine/core/include/settings/: GameSettings.h  UI_Settings.h  WindowSettings.h
pilcrow/engine/core/include/system/: System.hpp  SystemTraits.hpp
pilcrow/engine/core/include/systems/: WeaponSystems.h
pilcrow/engine/core/settings/: CMakeLists.txt  WindowSettings.h
pilcrow/engine/core/src/: EntityRef.cpp  GLFWWindow.cpp  GLProgram.cpp  GLShader.cpp  Model.cpp  RenderSystem.cpp  Renderer.cpp  RendererCommon.cpp  SettingsFileReader.cpp  Simulation.cpp  Texture.cpp  Window.cpp  World.cpp  World.inl  main.cpp
pilcrow/engine/core/src/component/: ComponentAggregate.cpp  ComponentAggregate.inl  ComponentPool.inl
pilcrow/engine/core/src/entity/: ArchetypeRef.cpp  ArchetypeRef.inl  ConstrainedEntityRef.inl  EntitiesWith.inl  Entity.cpp  Entity.inl  EntityRef.inl
pilcrow/engine/core/src/system/: System.inl
pilcrow/engine/core/system/: CMakeLists.txt  System.hpp  System.inl  SystemTraits.hpp
pilcrow/engine/core/systems/: CMakeLists.txt  WeaponSystems.h
pilcrow/engine/rest_api/: CMakeLists.txt  RESTAPI.cpp  RESTAPI.h
pilcrow/engine/rest_api/include/: RESTAPI.h
pilcrow/engine/rest_api/src/: RESTAPI.cpp
pilcrow/modules/: CMakeLists.txt
pilcrow/modules/jellyfish_renderer/: AssimpLoaders.hpp  CMakeLists.txt  Jellyfish.h  Model.cpp  Model.h  README.txt  RenderMain.cpp  Util.h  Vertex.cpp  iMesh.h  iTexture.h  iWindow.h
pilcrow/modules/jellyfish_renderer/GL/: CMakeLists.txt  GLMesh.cpp  GLMesh.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLText.cpp  GLText.h  GLTexture.cpp  GLTexture.h  GLWindow.cpp  GLWindow.h
pilcrow/modules/jellyfish_renderer/include/: AssimpLoaders.hpp  Camera.h  Frustum.h  GLMesh.h  GUID.h  Jellyfish.h  Material.h  Model.h  ObjectAttribs.h  RenderResourceManager.h  Util.h  Vertex.h  iDeviceObject.h  iMesh.h  iObject.h  iRefCounter.h  iShader.h  iTexture.h  iWindow.h
pilcrow/modules/jellyfish_renderer/include/GL/: GLMesh.h  GLProgram.h  GLShader.h  GLText.h  GLTexture.h  GLWindow.h
pilcrow/modules/jellyfish_renderer/src/: Camera.cpp  GLMesh.cpp  GLWindow.cpp  Model.cpp  RenderMain.cpp  RenderResourceManager.cpp  Vertex.cpp
pilcrow/modules/jellyfish_renderer/src/GL/: GLMesh.cpp  GLProgram.cpp  GLShader.cpp  GLText.cpp  GLTexture.cpp  GLWindow.cpp  glmesh.cpp  (+2 more)
pilcrow/modules/physics/: CMakeLists.txt
pilcrow/modules/physics/components/: Body.cpp  Body.h  CMakeLists.txt  Manifold.cpp
pilcrow/modules/physics/include/: Mathematics.h
pilcrow/modules/physics/src/: Mathematics.cpp
pilcrow/modules/physics/systems/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Integration.cpp  Integration.h  PhysicsSystems.h  Resolution.cpp  Resolution.h
pilcrow/runtimes/: CMakeLists.txt
pilcrow/runtimes/restful_runtime/: CMakeLists.txt  main.cpp
pilcrow/runtimes/restful_runtime/src/: main.cpp
pilcrow/runtimes/unit_test_runtime/: CMakeLists.txt
pilcrow/runtimes/unit_test_runtime/src/: main.cpp
pilcrow/tests/sample_test/: CMakeLists.txt
pilcrow/tests/sample_test/include/: sample.h
pilcrow/tests/sample_test/src/: sample.cpp  unittest_sample.cpp
(+262 files in other folders)
