add_subdirectory(utils)

add_subdirectory(assimp)
#add_subdirectory(cpprestsdk)
#add_subdirectory(freetype)
#add_subdirectory(glfw)
#add_subdirectory(googletest)

#Header only libraries
add_subdirectory(slot_map)
add_subdirectory(detection_idiom)
add_subdirectory(glm)

#Will eventually be removed and exist in graphics
add_subdirectory(glad)
add_subdirectory(stb_image)
#################################################